--- a/Page2.html
+++ b/Page2.html
@@ -56,7 +56,7 @@ The history of ancient Egypt occurred as a series of stable kingdoms, separated 
 <center> <h1> <a href="https://www.viator.com/Cairo-tourism/d782-r3785131040-s43370544?mcid=33953&tsem=true&supci=1292390064&supag=3785131040&supsc=kwd-19618222848:aud-806379951&supai=76553572756229&supdv=c&supnt=o&supkw=the%20grand%20egyptian%20museum&supti=kwd-19618222848:aud-806379951&suplp=143032&supli=143032&m=33953&supag=3785131040&supsc=kwd-19618222848:aud-806379951&supai=76553572756229&supdv=c&supnt=nt:o&suplp=143032&supli=143032&supti=kwd-19618222848:aud-806379951&tsem=true&supci=kwd-19618222848:aud-806379951&supkw=the%20grand%20egyptian%20museum&msclkid=85a668d4e34311a8362e0d529175c643" target="_blank"> 
 <button style="background-color:lightblue; font-size: 40px;"> Book Your Ticket </button> </a> </h1> </center>
 
-<center> <a href="C:\Users\HP\Desktop\CSS101 Proj 2\Page1.html"><button style="font-size: 20px;">Previous Page</button></a> </center>
+<center> <a href="https://s1rmarw.github.io/Gem/Page1.html"><button style="font-size: 20px;">Previous Page</button></a> </center>
 
 </head>
 </body>
